docs/refactor/p11_evidence/pre_f4_migration_20260706/ref_gateway_plugins_svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"prometheus.io/path":"/metrics","prometheus.io/port":"8080","prometheus.io/scrape":"true"},"labels":{"app":"gateway-plugins","app.kubernetes.io/component":"aibrix-gateway-plugin","app.kubernetes.io/managed-by":"kubectl","app.kubernetes.io/name":"aibrix","app.kubernetes.io/version":"nightly"},"name":"aibrix-gateway-plugins","namespace":"aibrix-system"},"spec":{"ports":[{"name":"gateway","port":50052,"protocol":"TCP","targetPort" [...]
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  creationTimestamp: "2025-06-03T11:04:22Z"
  labels:
    app: gateway-plugins
    app.kubernetes.io/component: aibrix-gateway-plugin
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/name: aibrix
    app.kubernetes.io/version: nightly
  name: aibrix-gateway-plugins
  namespace: aibrix-system
  resourceVersion: "53037440"
  uid: f8aeb2cd-adca-4b29-9be0-ec181ffa8e36
spec:
  clusterIP: 10.98.129.46
  clusterIPs:
  - 10.98.129.46
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: gateway
    port: 50052
    protocol: TCP
    targetPort: 50052
  - name: profiling
    port: 6060
    protocol: TCP
    targetPort: 6060
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gateway-plugins
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
